# flashcraft

./: README.md  pyproject.toml
docker/: Dockerfile
flashcraft/: logging.py  plugins.py
flashcraft/adminpanel/: app.py
flashcraft/adminpanel/resources/: index.html
flashcraft/plugins/: __init__.py  amazon_ec2.py  amazon_ec2_pricing.json  backblaze_b2.py
flashcraft/runtime/: __init__.py  __main__.py
