[tool.poetry]
name = "flashcraft"
version = "0.1.0"
description = ""
authors = ["Radian LLC <contact+flashcraft@radian.codes>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"
gunicorn = "^21.2.0"
boto3 = "^1.34.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
