[tool.poetry]
name = "flashcraft"
version = "0.1.0"
description = ""
authors = ["Radian LLC <contact+flashcraft@radian.codes>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.1.3"
gunicorn = "^22.0.0"
boto3 = "^1.34.7"
requests = "^2.32.4"
lxml = "^4.9.4"
beautifulsoup4 = "^4.12.2"
b2sdk = "^1.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
